Main TOAST landing page
added landing page for TOAST

--- a/software.html
+++ b/software.html
@@ -74,7 +74,7 @@
 								<p><span class="image left"><img src="images/TOAST_Manual_cover.png" alt="" /></span> TOAST is an open source R package designed to help you effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can be downloaded here and requires R. </p><p>TOAST is continually updated to include utility functions that make data parsing easier and circumvent the use of multiple software steps in informatic pipelines. TOAST can generate output that can be fed directly into IQTREE and has numerous functions for analyzing missing data and subsetting massive sequence datasets</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button custom fit ">TOAST Walkthrough</a></li>
+											<li><a href="toastMain.html" class="button custom fit ">TOAST Walkthrough</a></li>
 										</ul>
 									</div>
 								</div>
