--- a/toastMain.html
+++ b/toastMain.html
@@ -188,7 +188,7 @@
                       class="item MissingData"
                       style="position: absolute; left: 877px; top: 219px"
                     >
-                      <a href="" class="fancybox">
+                      <a href="#" class="fancybox">
                         <img src="images/TOAST/toastUtilities.png" alt="" />
                         <div class="overlay"><span>Interactively explore your data before an analysis</span></div>
                       </a>
