TOAST install page
part 1 of TOAST tutorial

--- a/publications.html
+++ b/publications.html
@@ -71,12 +71,16 @@
 												the end-Cretaceous. In bioRxiv; accepted Nature Ecology & Evolution.
 												<b><a target="_blank" href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">PDF</a></b></li>
 
-											<li>Carlson KB, Wcisel DJ, Ackerman HD, Romanet J, Christiansen EF, Niemuth JN, Williams C, Breen M, Stoskopf M, Dornburg A, and Yoder JA. Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, Anaxyrus baxteri. Research Square; Submitted to Conservation Genetics<b><a target="_blank" href="https://assets.researchsquare.com/files/rs-1265947/v1/effd5c7e-592f-4170-9f1c-bc9b0dbfbb67.pdf?c=1644939558"> PDF</a></b></li>
+											
 									</ul>
 
 								<h3><b>Publications</b></h3>
 									<h4>2022</h4>
 										<ul><span class="custom_bold">
+											<li>Carlson KB, Wcisel DJ, Ackerman HD, Romanet J, Christiansen EF, Niemuth JN, Williams C, Breen M, Stoskopf M, Dornburg A, and Yoder JA. Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, <i>Anaxyrus baxteri</i>. 
+												<i>Conservation Genetics</i>, Published online 28 April 2022. 
+												<b><a target="_blank" href="https://link.springer.com/content/pdf/10.1007/s10592-022-01444-8.pdf"> PDF</a></b></li>
+											
 											<li> Fisk JN, Mahal AR, Dornburg A, Gaffney SG, Aneja S, Contessa JN, Rimm D, Yu JB,
 												& Townsend JP. Premetastatic shifts of endogenous and exogenous mutational processes support consolidative
 												therapy in EGFR-driven lung adenocarcinoma. 
