--- a/toastMain.html
+++ b/toastMain.html
@@ -123,7 +123,7 @@
                       class="item All"
                       style="position: absolute; left: 0px; top: 0px"
                     >
-                      <a href="#" class="fancybox"
+                      <a href="toastInstall.html" class="fancybox"
                         ><img src="images/TOAST/toastInstall.png" alt="" />
                         <div class="overlay"><span>Installation</span></div></a
                       >
