fixed scaling issue

--- a/toastMain.html
+++ b/toastMain.html
@@ -110,7 +110,7 @@
                     <li><a class="active" data-filter="*" href="#">All</a></li>
                     <li><a data-filter=".Assembly" href="#">Assembly</a></li>
                     <li>
-                      <a data-filter=".MissingData" href="#">Quality Control</a>
+                      <a data-filter=".MissingData" href="#">Filtration</a>
                     </li>
                     <li><a data-filter=".Utilities" href="#">Utilities</a></li>
                   </ul>
