--- a/toastMain.html
+++ b/toastMain.html
@@ -110,9 +110,9 @@
                     <li><a class="active" data-filter="*" href="#">All</a></li>
                     <li><a data-filter=".Assembly" href="#">Assembly</a></li>
                     <li>
-                      <a data-filter=".MissingData" href="#">Filtration</a>
+                      <a data-filter=".MissingData" href="#">Filter</a>
                     </li>
-                    <li><a data-filter=".Utilities" href="#">Utilities</a></li>
+                    <li><a data-filter=".Utilities" href="#">Utils</a></li>
                   </ul>
                   <ul
                     class="items list-unstyled clearfix animated fadeInRight showing"
