--- a/toastMain.html
+++ b/toastMain.html
@@ -108,7 +108,7 @@
                 <div id="portfolio">
                   <ul class="filters list-inline">
                     <li><a class="active" data-filter="*" href="#">All</a></li>
-                    <li><a data-filter=".Assembly" href="#">Assembly</a></li>
+                    <li><a data-filter=".Assembly" href="#">Data</a></li>
                     <li>
                       <a data-filter=".MissingData" href="#">Filter</a>
                     </li>
