--- a/toastMain.html
+++ b/toastMain.html
@@ -108,11 +108,11 @@
                 <div id="portfolio">
                   <ul class="filters list-inline">
                     <li><a class="active" data-filter="*" href="#">All</a></li>
-                    <li><a data-filter=".Assembly" href="#">Data</a></li>
+                    <li><a data-filter=".Assembly" href="#">Part1</a></li>
                     <li>
-                      <a data-filter=".MissingData" href="#">Filter</a>
+                      <a data-filter=".MissingData" href="#">Part2</a>
                     </li>
-                    <li><a data-filter=".Utilities" href="#">Utils</a></li>
+                    <li><a data-filter=".Utilities" href="#">Part3</a></li>
                   </ul>
                   <ul
                     class="items list-unstyled clearfix animated fadeInRight showing"
