--- a/current.html
+++ b/current.html
@@ -179,6 +179,14 @@
 								</div>
 								<hr />
 								<div class="div12">
+									<a class="image left">
+										<img src="images/people/Hannah.jpg"
+										alt="" /></a>
+									<b>Hannah Bowman</b><br>
+									<i>Undergraduate, Senior</i><br>
+									Hi, I'm Hannah and I am a senior majoring in Biology at UNC Charlotte. I enjoy learning about the life sciences, especially genomics. My current goal is to focus on research before pursuing a master’s to become a physician assistant. I am currently on the virus team helping to compile and analyze incidence data of common respiratory viruses.
+								</div>
+								<hr />
 							</div>	
 
 					</div>
