--- a/toastBUSCO.html
+++ b/toastBUSCO.html
@@ -201,10 +201,19 @@ That's it! Now you are ready to concatenate some data or start filtering based o
 From here you are are ready to get started!
 <br/>
 <br/>
-				<a href="toastMain.html" class="button fit ">Next Section: Concatenation and Missing Data</a>
+				<a href="toastMain.html" class="button fit ">Next Section: Concatenation | Missing Data</a>
         <br/>
         <br/>
-				<a href="toastMain.html" class="button fit ">Back to TOAST main page</a>
+        <a href="toastBUSCO.html" class="button fit ">Skip to: Gene tree based filtration</a>
+        <br/>
+        <br/>
+        <a href="toastBUSCO.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
+        <br/>
+        <br/>
+        <a href="toastInstall.html" class="button fit ">Back to: Installation</a>
+        <br/>
+        <br/>
+				<a href="toastMain.html" class="button fit ">Back to: TOAST main page</a>
         <hr />
 
 
