--- a/toastInstall.html
+++ b/toastInstall.html
@@ -130,7 +130,16 @@ sudo apt install libxml2-dev
 From here you are are ready to get started!
 <br/>
 <br/>
-				<a href="toastMain.html" class="button fit ">Next Section: Dataset Assembly</a>
+				<a href="toastBUSCO.html" class="button fit ">Next Section: BUSCO Parsing | Alignment</a>
+        <br/>
+        <br/>
+        <a href="toastBUSCO.html" class="button fit ">Skip to: Dataset Concatenation | Missing Data</a>
+        <br/>
+        <br/>
+        <a href="toastBUSCO.html" class="button fit ">Skip to: Gene tree based filtration</a>
+        <br/>
+        <br/>
+        <a href="toastBUSCO.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
         <br/>
         <br/>
 				<a href="toastMain.html" class="button fit ">Back to TOAST main page</a>
