Added research page
new page, long overdue

--- a/research.html
+++ b/research.html
@@ -1,82 +1,170 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Landed by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>EvIL- Research</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
+  <head>
+    <title>EvIL- Research</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header">
+        <h1 id="logo"><a href="index.html">Evolutionary Informatics Lab</a></h1>
+        <nav id="nav">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="research.html">Research</a>
+              <ul>
+                <li><a href="macro.html">Macroevolution</a></li>
+                <li><a href="comp.html">Evolutionary Medicine</a></li>
+                <li><a href="phylo.html">Phylogenomics</a></li>
+                <li><a href="immuno.html">Immunogenetics</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="current.html">Team</a>
+              <ul>
+                <li><a href="alex.html">Alex Dornburg</a></li>
+                <li><a href="current.html">Current Team Members</a></li>
+                <li><a href="alumni.html">Former Team Members</a></li>
+              </ul>
+            </li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="software.html">Software</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="contact.html" class="button primary">Join Us</a></li>
+          </ul>
+        </nav>
+      </header>
 
-			<!-- Header -->
-			<header id="header">
-				<h1 id="logo"><a href="index.html">Evolutionary Informatics Lab</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="research.html">Research</a>
-							<ul>
-								<li><a href="macro.html">Macroevolution</a></li>
-								<li><a href="comp.html">Computational Epidemiology</a></li>
-								<li><a href="phylo.html">Phylogenomics</a></li>
-								<li><a href="immuno.html">Immunogenetics</a></li>
-							</ul>
-						</li>
-						<li><a href="current.html">Team</a>
-						<ul>
-							<li><a href="alex.html">Alex Dornburg</a></li>
-							<li><a href="current.html">Current Team Members</a></li>
-							<li><a href="alumni.html">Former Team Members</a></li>
-						</ul>
-					</li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="software.html">Software</a></li>
-						<li><a href="media.html">Media</a></li>
-						<li><a href="contact.html" class="button primary">Join Us</a></li>
-					</ul>
-				</nav>
-			</header>
+      <!-- Main -->
+      <div id="main" class="wrapper style1">
+        <div class="container">
+          <header class="major">
+            <h3>Why Evolutionary Informatics?</h3>
+          </header>
+          <!-- Content -->
+          <section id="content">
+              <span class="custom_bold">The 21st century is fundamentally different from any other point
+              in human history. We have achieved unprecedented technological
+              advances and global connectivity. However, these achievements have
+              also given rise to challenges that gravely threaten our future.
+              <p>Environmental changes resulting from our activities are increasing
+              the pace of species and habitat loss, impacting our global economy
+              and ecosystem services we rely on. Forecasted environmental
+              changes will also accelerate the emergence of novel
+              human-infecting pathogens with pandemic potential. <p>Consequently,
+              it has become clear that the health and future of our species is
+              intimately linked with the health and future of the planet’s
+              biodiversity and environments.
+            </p>
+            <p>
+              Although
+              evolutionary biology has classically been regarded as a historical
+              science, my work has underscored its importance for such developing innovative
+              research programs that can be deployed at the intersection between
+              humanity, the world’s biota, and our shared ecosystems.
+              Incorporating tools and techniques from evolutionary biology into
+              informatics and -omics approaches allow me to not only learn of
+              the history of life, but also from it. This evolutionary
+              informatic approach can leverage the power of increasingly massive
+              biological and -omic data and positions me to achieve </span><span class="strong" ; style="color: rgb(47, 156, 202)"
+                >my lab’s
+              mission of 
+              guiding effective stewardship of our planet and responses to
+                human health threats through research.</span
+              >
+            </p>
+            <a href="#" class="image fit"
+              ><img
+                src="images/Research/Wildflower.jpg"
+                alt="image of a wildflower over the Portugese coast"
+            /></a>
+            <h3>Our Role</h3>
+            <p>
+              My research is derived from a core foundation in phylogenomics,
+              macroevolution, and immunogenetics. By maintaining these strong core research areas, I am able to
+              leverage my research and computational experience into novel
+              evolutionary informatic analyses for multi/interdisciplinary
+              projects. For example, my pioneering integration of evolutionary
+              and immunological data remains uniquely informative regarding the
+              immunology of SARS-CoV-2 prophylaxis. This example illustrates how
+              my core foundational strengths allow me to develop evolutionary informatic applications
+              with high contemporary relevance for human health.
+            </p>
+            <p>
+              In my research program I emphasize the study of ray-finned fishes
+              (Actinopterygians). Actinopterygians comprise one out of every two
+              vertebrates and include numerous species of ecological, economic,
+              and research importance. I routinely conduct short-term research
+              projects aimed at filling critical knowledge gaps in our
+              understanding of these diverse organisms. My long-term research
+              projects build upon these insights to
+            </p>
 
-			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>Research</h2>
-							<p>This page is currently in progress! Please check back soon.</p>
-						</header>
+            <p>
+              <li>
+                provide a historical foundation for forecasting the response of
+                species facing global changes
+              </li>
+              <li>illuminate general rules of evolutionary persistence</li>
+              <li>
+                develop a comparative perspective on the roles of genotypic
+                novelty and variability in shaping the molecular pathways that
+                underlie the vertebrate immune response.
+              </li>
+            </p>
+            <p>
+              Collectively, these findings can provide necessary historical
+              context that facilitates accurate projection of the resilience of
+              biodiversity over the next century.
+            </p>
+          </section>
+        </div>
+      </div>
 
-					</div>
-				</div>
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a href="#" class="icon brands alt fa-github"
+              ><span class="label">GitHub</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon solid alt fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Evolutionary Informatics Lab. All rights reserved.</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
+    </div>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Evolutionary Informatics Lab. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
-
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
