--- a/journeys.html
+++ b/journeys.html
@@ -331,7 +331,7 @@
                 <div class="numbertext">1 / 45</div>
                 <img
                   src="images/journeys/mainImages/MainIMG_3505.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -347,7 +347,7 @@
                 <div class="numbertext">3 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_0098.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -355,14 +355,14 @@
                 <div class="numbertext">4 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainSouthernChile.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
             <div class="mySlides">
               <div class="numbertext">5 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainHiddenCanyon.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -370,7 +370,7 @@
                 <div class="numbertext">6 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainBabySloth.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -378,7 +378,7 @@
                 <div class="numbertext">7 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainThistle.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -400,7 +400,7 @@
                 <div class="numbertext">10 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainTrainTracks.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -424,7 +424,7 @@
                 <div class="numbertext">13 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_4091.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -432,7 +432,7 @@
                 <div class="numbertext">14 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_0382.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -447,7 +447,7 @@
                 <div class="numbertext">16 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainCrab.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
@@ -468,28 +468,28 @@
                 <div class="numbertext">19 / 45 </div>
                 <img
                   src="images/journeys/mainImages/Main_puffin.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">20 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainNatrix.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">21 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainFoggyMountain.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">22 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainMidnightSun.jpg"
-                  style="width: 100%"
+                 style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
@@ -579,7 +579,7 @@
                 <div class="numbertext">34 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIcelandMoss.jpg"
-                  style="width: 100%"
+                  style="width: 60%; height: 40%"
                 />
               </div>
 
@@ -656,7 +656,7 @@
                 <div class="numbertext">44 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainSnappingTurtle.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
