--- a/journeys.html
+++ b/journeys.html
@@ -496,7 +496,7 @@
                 <div class="numbertext">23 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_3527.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -504,7 +504,7 @@
                 <div class="numbertext">24 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_3528.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -520,7 +520,7 @@
                 <div class="numbertext">26 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_0172.jpg"
-                  style="width: 90%; height: 50%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -536,14 +536,14 @@
                 <div class="numbertext">28 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainSpiderBaby.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">29 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainCnemidopherus.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
@@ -557,14 +557,14 @@
                 <div class="numbertext">31 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIceland.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">32 / 45 </div>
                 <img
                   src="images/journeys/mainImages/Maincliff2.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -572,14 +572,14 @@
                 <div class="numbertext">33 / 45 </div>
                 <img
                   src="images/journeys/mainImages/Mainchameleon.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">34 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIcelandMoss.jpg"
-                  style="width: 60%; height: 40%"
+                  style="width: 40%; height:25%"
                 />
               </div>
 
@@ -587,7 +587,7 @@
                 <div class="numbertext">35 / 45 </div>
                 <img
                   src="images/journeys/mainImages/Maincoluber.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -603,7 +603,7 @@
                 <div class="numbertext">37 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainHiddenRuins.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -611,7 +611,7 @@
                 <div class="numbertext">38 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainBison.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -627,7 +627,7 @@
                 <div class="numbertext">40 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainEyelashViper.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
@@ -635,14 +635,14 @@
                 <div class="numbertext">41 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainStrawberryFrog.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
                 <div class="numbertext">42 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainGlassFrog.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
               <div class="mySlides">
@@ -656,7 +656,7 @@
                 <div class="numbertext">44 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainSnappingTurtle.jpg"
-                  style="width: 80%; height: 60%"
+                  style="width: 60%; height: 45%"
                 />
               </div>
               <div class="mySlides">
@@ -990,7 +990,7 @@
       <!--  Dramatic break       -->
       <!--  Dramatic break       -->
       <hr />
-      <span style="text-align: center"><h3>At Sea</h3></span>
+      <span style="text-align: center"><h3>At Sea (coming soon)</h3></span>
       <hr />
 
       <!-- Footer -->
