fixed scaling issues

--- a/journeys.html
+++ b/journeys.html
@@ -416,7 +416,7 @@
                 <div class="numbertext">12 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_0586.jpg"
-                  style="height: 50%"
+                  style="width: 40%; height: 40%"
                 />
               </div>
 
@@ -528,7 +528,7 @@
                 <div class="numbertext">27 / 45 </div>
                 <img
                   src="images/journeys/mainImages/MainIMG_1473.jpg"
-                  style="width: 100%"
+                  style="width: 80%; height: 60%"
                 />
               </div>
 
