images, new toast pages, etc
another big long overdue update

--- a/journeys.html
+++ b/journeys.html
@@ -667,6 +667,42 @@
                 />
               </div>
 
+              <div class="mySlides">
+                <div class="numbertext">46 / 45 </div>
+                <img
+                  src="images/journeys/mainImages/MainWaterIcelandGlacier.jpg"
+                  style="width: 80%; height: 60%"
+                />
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">47 / 45 </div>
+                <img
+                  src="images/journeys/mainImages/MainWaterPiranha.jpeg"
+                  style="width: 80%; height: 60%"
+                />
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">48 / 45 </div>
+                <img
+                  src="images/journeys/mainImages/MainWaterChub.jpeg"
+                  style="width: 80%; height: 60%"
+                />
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">49 / 45 </div>
+                <img
+                  src="images/journeys/mainImages/MainWaterAntarcticice.jpg"
+                  style="width: 60%; height: 45%"
+                />
+              </div>
+              <div class="mySlides">
+                <div class="numbertext">50 / 45 </div>
+                <img
+                  src="images/journeys/mainImages/MainWaterAntarcticafog.jpg"
+                  style="width: 50%; height: 40%"
+                />
+              </div>
+
               <!-- Next/previous controls -->
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -990,9 +1026,43 @@
       <!--  Dramatic break       -->
       <!--  Dramatic break       -->
       <hr />
-      <span style="text-align: center"><h3>At Sea (coming soon)</h3></span>
+      <span style="text-align: center"><h3>Water (coming soon)</h3></span>
       <hr />
 
+<div class="container-fluid">
+          <div class="row1x">
+            <div class="column1x">
+              <img
+                src="images/journeys/t_WaterIcelandGlacier.jpg"
+                onclick="openModal();currentSlide(46)"
+                class="hover-shadow"
+              />
+
+              <img
+                src="images/journeys/t_WaterPiranha.jpg"
+                onclick="openModal();currentSlide(47)"
+                class="hover-shadow"
+              />
+
+              <img
+                src="images/journeys/t_WaterChub.jpg"
+                onclick="openModal();currentSlide(48)"
+                class="hover-shadow"
+              />
+              <img
+                src="images/journeys/t_WaterAntarcticice.jpg"
+                onclick="openModal();currentSlide(49)"
+                class="hover-shadow"
+              />
+               <img
+                src="images/journeys/t_WaterAntarcticafog.jpg"
+                onclick="openModal();currentSlide(50)"
+                class="hover-shadow"
+              />
+              </div>
+              </div>
+              </div>
+<hr />
       <!-- Footer -->
       <footer id="footer">
         <ul class="icons">
