--- a/toastMain.html
+++ b/toastMain.html
@@ -130,6 +130,15 @@
                     </li>
                     <li
                       class="item Assembly"
+                      style="position: absolute; left: 877px; top: 0px"
+                    >
+                      <a href="toastBUSCO.html" class="fancybox">
+                        <img src="images/TOAST/TOASTAlignmentGraphic.jpg" alt="" />
+                        <div class="overlay"><span>Batch sequence alignments</span></div>
+                      </a>
+                    </li>
+                    <li
+                      class="item Assembly"
                       style="position: absolute; left: 292px; top: 0px"
                     >
                       <a href="images/work/2.jpg" class="fancybox">
@@ -144,15 +153,6 @@
                       <a href="images/work/3.jpg" class="fancybox">
                         <img src="images/TOAST/TOASTFileCOnversionGraphic.jpg" alt="" />
                         <div class="overlay"><span>Convert between file types</span></div>
-                      </a>
-                    </li>
-                    <li
-                      class="item Assembly"
-                      style="position: absolute; left: 877px; top: 0px"
-                    >
-                      <a href="images/work/4.jpg" class="fancybox">
-                        <img src="images/TOAST/TOASTAlignmentGraphic.jpg" alt="" />
-                        <div class="overlay"><span>Batch sequence alignments</span></div>
                       </a>
                     </li>
                     <li
