--- a/toastDatasetAssembly.html
+++ b/toastDatasetAssembly.html
@@ -65,7 +65,7 @@
         <div class="transbox">
             <h3>What is in this section</h3>
             <p>
-              In this section we will make concatenated alignments for IQTREE2 or other phylogenetic software and also assess missing data patterns
+              In this section we will make concatenated alignments for IQTREE2 or other phylogenetic software and look at a rudimentary way to assess missing data patterns before diving deeper in the next section.
               <br />
               <br />
               <strong>This section assumes you have a folder full of single gene/locus alignments</strong>
@@ -96,9 +96,9 @@ write.csv(missing, file="missing_data.csv")</code></pre>
 <br />
 <br />
 <h3>Visualizing Missing Data Patterns</h3>
-Part of the orthology assembly steps in both sections 2 and 3 was used to generate .tsv file entitled "missing_data.tsv" that is <a href='https://github.com/carolinafishes/toast/tree/master/sample_data'> distributed with this software.</a> We will use this file throughout this section. Let's begin by reading it into memory. Note you may need to change the path depending on where you downloaded this. 
+Part of the orthology assembly steps in both sections 2 and 3 was used to generate .csv file entitled "missing_data.csv" that is <a href='https://github.com/carolinafishes/toast/tree/master/sample_data'> distributed with this software.</a> We will use this file throughout this section. Let's begin by reading it into memory. Note you may need to change the path depending on where you downloaded this. 
 <pre style="text-align: left; white-space: pre-line">
-<code>tsv<-read.delim("/toast/sample_data/missing_data.tsv", header=TRUE)</code></pre>
+<code>missing<-read.csv("/toast/sample_data/missing_data.csv", header=TRUE)</code></pre>
 With this file we can begin to explore coarse missing data patterns. 
 <br />
 If you look at the distributed file, you have probably realized that ANY delimited file of data presence/absence can be used with the following visualization functions (just needs data and NA for no data). This includes phenotypic trait data, behavioural observations, etc!
@@ -107,12 +107,20 @@ If you look at the distributed file, you have probably realized that ANY delimit
 <strong style= color:red> Now you have no excuse to not look at missing data patterns anymore! </strong>
 <br />
 <br />
-We are going to start by visualizing a missing data matrix for this dataset using the mismap function from 
-
-Left off here
-
-
-Let's start with a snapshot of who has more than 1000 out of 6000 loci in the cetacean dataset as follows
+We are going to start by visualizing a missing data matrix for this dataset using the mismap function from the R package Amelia  
+<br> note that this data has the loci as a column. Let's quickly remove these. Your data may not need this, but this pops up often so why not cover it here. 
+ <img class="b30" src="https://carolinafishes.github.io/images/TOAST/TOAST_headmissing.png" alt="">
+<pre style="text-align: left; white-space: pre-line">
+<code>missing2<-missing[,-1]</code></pre>
+Now we can start by visualizing a missing data matrix for this dataset using the mismap function from the R package Amelia  
+<pre style="text-align: left; white-space: pre-line">
+<code>library(Amelia)
+  par(mar = c(10, 2, 4, 4) + 0.1, oma= c(7, 1, 1, .5) + 0.1)
+  missmap(missing2, rank.order=FALSE, las=2, cex.axis=0.8)</code></pre>
+Note that later we can use TOAST functions to order this in the order we would like based on a tree, but for now we will use the default<br />
+<p> 
+  <img class="b30" src="https://carolinafishes.github.io/images/TOAST/TOASTmissmap.png" alt="">
+  Let's start with a snapshot of who has more than 1000 out of 6000 loci in the cetacean dataset as follow
 <pre style="text-align: left; white-space: pre-line"><code>VisualizeCoverage(tsv, 1000)</code></pre>
 This will produce a two panel graphic. The top panel is a circlepack plot showing the number of missing loci per species that meet the threshold of having at least 1000 loci. The bottom panel depicts the number of loci captured versus missing for each species that did not meet the threshold criterion.<br>
 <img class="b30" src="https://carolinafishes.github.io/images/TOAST_VisCoverage.png" alt="">
