data vis tutorial update
new page of toast tutorial has been added

--- a/toastMain.html
+++ b/toastMain.html
@@ -141,18 +141,9 @@
                       class="item Assembly"
                       style="position: absolute; left: 292px; top: 0px"
                     >
-                      <a href="images/work/2.jpg" class="fancybox">
+                      <a href="toastDatasetAssembly.html" class="fancybox">
                         <img src="images/TOAST/toastDatasetAssembly.png" alt="" />
                         <div class="overlay"><span>Phylogenetic Dataset Assembly</span></div>
-                      </a>
-                    </li>
-                    <li
-                      class="item Utilities"
-                      style="position: absolute; left: 585px; top: 0px"
-                    >
-                      <a href="images/work/3.jpg" class="fancybox">
-                        <img src="images/TOAST/TOASTFileCOnversionGraphic.jpg" alt="" />
-                        <div class="overlay"><span>Convert between file types</span></div>
                       </a>
                     </li>
                     <li
@@ -165,12 +156,22 @@
                       </a>
                     </li>
                     <li
+                      class="item Utilities"
+                      style="position: absolute; left: 585px; top: 0px"
+                    >
+                      <a href="images/work/3.jpg" class="fancybox">
+                        <img src="images/TOAST/TOASTFileCOnversionGraphic.jpg" alt="" />
+                        <div class="overlay"><span>Convert between file types</span></div>
+                      </a>
+                    </li>
+                    
+                    <li
                       class="item Assembly"
                       style="position: absolute; left: 292px; top: 219px"
                     >
                       <a href="images/work/6.jpg" class="fancybox">
                         <img src="images/TOAST/toastCustomAssembly.png" alt="" />
-                        <div class="overlay"><span>Custom Datasets based on missing data thresholds </span></div>
+                        <div class="overlay"><span>In progress </span></div>
                       </a>
                     </li>
                     <li
