--- a/toastMain.html
+++ b/toastMain.html
@@ -150,7 +150,7 @@
                       class="item MissingData"
                       style="position: absolute; left: 0px; top: 219px"
                     >
-                      <a href="#" class="fancybox">
+                      <a href="toastVisualization.html" class="fancybox">
                         <img src="images/TOAST/TOASTMissingGraphic2.jpg" alt="" />
                         <div class="overlay"><span>Visualize missing data patterns  </span></div>
                       </a>
@@ -159,7 +159,7 @@
                       class="item Utilities"
                       style="position: absolute; left: 585px; top: 0px"
                     >
-                      <a href="images/work/3.jpg" class="fancybox">
+                      <a href="toastUtilities.html" class="fancybox">
                         <img src="images/TOAST/TOASTFileCOnversionGraphic.jpg" alt="" />
                         <div class="overlay"><span>Convert between file types</span></div>
                       </a>
