--- a/toastBUSCO.html
+++ b/toastBUSCO.html
@@ -204,13 +204,13 @@ That's it! Now you are ready to concatenate some data or start filtering based o
 
 <br/>
 <br/>
-				<a href="toastMain.html" class="button fit ">Next Section: Concatenation | Missing Data</a>
+				<a href="toastDatasetAssembly.html" class="button fit ">Next Section: Concatenation | Missing Data</a>
         <br/>
         <br/>
         <a href="toastBUSCO.html" class="button fit ">Skip to: Gene tree based filtration</a>
         <br/>
         <br/>
-        <a href="toastBUSCO.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
+        <a href="toastUtilities.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
         <br/>
         <br/>
         <a href="toastInstall.html" class="button fit ">Back to: Installation</a>
