--- a/toastDatasetAssembly.html
+++ b/toastDatasetAssembly.html
@@ -160,13 +160,13 @@ That's it! In the next section we will do some more advanced visualizations of m
 
 <br/>
 <br/>
-				<a href="toastMain.html" class="button fit ">Next Section: Missing Data Visualization</a>
+				<a href="toastVisualization.html" class="button fit ">Next Section: Missing Data Visualization</a>
         <br/>
         <br/>
         <a href="toastBUSCO.html" class="button fit ">Skip to: Gene tree based filtration</a>
         <br/>
         <br/>
-        <a href="toastBUSCO.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
+        <a href="toastUtilities.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
         <br/>
         <br/>
         <a href="toastInstall.html" class="button fit ">Back to: Installation</a>
